fix: layout: Home page alignment was off from the header and header needed to be left aligned

--- a/styles/layout/header.module.css
+++ b/styles/layout/header.module.css
@@ -1,6 +1,6 @@
 .navbar {
   background-color: var(--primary-green);
-  min-height: 15vh;
+  min-height: 10vh;
 }
 
 .title {
